--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "recoil": "^0.7.7",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
